syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "protos/rtos/common.proto";

option csharp_namespace = "Adnc.Shared.Rpc.Grpc.Rtos";

package rtos;

message ProductSearchRequest{
  repeated int64 Ids=1;
  int32 StatusCode =2;
}

message ProductReply{
  int64 Id= 1;
  string Name=2;
  rtos.DecimalValue Price =3;
}

message ProductListReply{
	repeated ProductReply List =1;
}