syntax = "proto3";

import "google/protobuf/empty.proto";
import "protos/rtos/common.proto";
import "protos/rtos/whsegrpc_getproducts.proto";

option csharp_namespace = "Adnc.Shared.Rpc.Grpc.Services";

package services;

service  WhseGrpc {
  rpc GetProducts(rtos.ProductSearchRequest) returns (rtos.GrpcResponse);
}
